--- a/js/ProjectHistory.json
+++ b/js/ProjectHistory.json
@@ -1,4 +1,53 @@
 { data: [
+{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+//{ project: "", date: "" },
+{ project: "Generated translations and missing translation documentation for 5.3 Release", date: "August 2021" },
+{ project: "Updated OPEN LDAP to support IPv6 addressing", date: "August 2021" },
+{ project: "Improvements to securty on Single Sign On Cryptography", date: "August 2021" },
+{ project: "Testing and bugfixes for 5.3 Release", date: "July 2021" },
 { project: "Support X-Forwarded-For Header for IP Restriction Whitelist", date: "June 2021" },
 { project: "Evaluator Productivity and Calibration Report", date: "June 2021" },
 { project: "Call Handler Evaluation Averages Report", date: "June 2021" },
