--- a/js/ProjectHistory.json
+++ b/js/ProjectHistory.json
@@ -262,3 +262,4 @@ var projectHistory = [
 { project: "Blue Moon Gifts", date: "January 2005" },
 { project: "NETjunkE", date: "February 2003" }
 ];
+console.error(projectHistory);
